push before ending of the class

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 
             </ul>
+            <button onclick="mostrarTareaMasRapida()">Tarea más rápida</button>
+            <p id="displayTareaMasRapida"></p>
         </div>
     </section>
 
