--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
             </ul>
-            <button onclick="mostrarTareaMasRapida()">Tarea más rápida</button>
+            <button class="boton-tarea-mas-rapida" onclick="mostrarTareaMasRapida()">Tarea más rápida</button>
             <p id="displayTareaMasRapida"></p>
         </div>
     </section>
